add creature hunger, tweaked rendering